--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 annotated-types==0.7.0
 anyio==4.10.0
-bcrypt==4.3.0
+bcrypt==3.1.7
 certifi==2025.8.3
 cffi==1.17.1
 click==8.2.1
@@ -9,6 +9,7 @@ cryptography==45.0.6
 dnspython==2.7.0
 ecdsa==0.19.1
 email-validator==2.3.0
+et_xmlfile==2.0.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.5
@@ -23,8 +24,12 @@ Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+numpy==2.3.2
+openpyxl==3.1.5
 orjson==3.11.3
+pandas==2.3.2
 passlib==1.7.4
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
@@ -32,9 +37,11 @@ pydantic-extra-types==2.10.5
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 rich==14.1.0
 rich-toolkit==0.15.0
@@ -49,6 +56,7 @@ starlette==0.47.3
 typer==0.16.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+tzdata==2025.2
 ujson==5.11.0
 urllib3==2.5.0
 uvicorn==0.35.0
