Subiendo update del 23 de septiembre render con todas las dependencias

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,42 @@
-fastapi
-uvicorn
-sqlalchemy
-pandas
-python-jose[cryptography]
-passlib[bcrypt]
-openpyxl
-python-multipart
-gunicorn
-psycopg2-binary
-alembic
+alembic==1.12.1
+anyio==3.7.1
+bcrypt==4.0.1
+cffi==2.0.0
+click==8.3.0
+colorama==0.4.6
+cryptography==41.0.7
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.3.0
+et_xmlfile==2.0.0
+fastapi==0.104.1
+greenlet==3.2.4
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
+numpy==1.26.4
+openpyxl==3.1.2
+pandas==2.2.1
+passlib==1.7.4
+psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pycparser==2.23
+pydantic==1.10.14
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+pytz==2025.2
+PyYAML==6.0.2
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.23
+starlette==0.27.0
+typing_extensions==4.15.0
+tzdata==2025.2
+uvicorn==0.24.0
+watchfiles==1.1.0
+websockets==15.0.1
