feat: Implementación de migraciones de base de datos y ajustes iniciales del backend

--- a/.env
+++ b/.env
@@ -1,6 +1,1 @@
-DB_USER=postgres
-DB_PASSWORD=12345
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=app_auditorias
-SECRET_KEY=12345
+DATABASE_URL="postgresql://app_auditorias_1j1j_user:4tKDKGBIBQA37NrIFSMdFl0pqmttS3Ne@dpg-d39gau6mcj7s73f2h9hg-a/app_auditorias_1j1j"
