--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="postgresql://app_auditorias_1j1j_user:4tKDKGBIBQA37NrIFSMdFl0pqmttS3Ne@dpg-d39gau6mcj7s73f2h9hg-a/app_auditorias_1j1j"
+DATABASE_URL=postgresql://app_auditorias_u8br_user:S8YHPFJQuiQsGMzN84zclKPL2pHc5iKq@dpg-d39jjok9c44c73fjb500-a/app_auditorias_u8br
+             
