--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,13 @@ pytestdebug.log
 # Django stuff:
 *.log
 local_settings.py
+
+# Databases
 db.sqlite3
 db.sqlite3-journal
+*.sqlite
+*.sqlite3
+*.db
 
 # Flask stuff:
 instance/
