--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://app_auditorias_32pn_user:JmX7uwKJo1JzD8e82vC1XKQcTsOmNiNl@dpg-d3a865e3jp1c73cr1efg-a/app_auditorias_32pn
+sqlalchemy.url = postgresql://app_auditorias_b5oy_user:24c3KQxW7f9YHsnRlLqyhI9QHKjoblvu@dpg-d3ueo88dl3ps73f3k96g-a.oregon-postgres.render.com/app_auditorias_b5oy
 
 
 [post_write_hooks]
