Fix: Build command inline en render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: python
     region: oregon
     plan: free
-    buildCommand: "./build.sh"
-    startCommand: "uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
+    buildCommand: "pip install -r requirements.txt && cd frontend-app && npm install && npm run build && cd .. && alembic upgrade head"
+    startCommand: "gunicorn -k uvicorn.workers.UvicornWorker backend.main:app"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
