--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-# SEGURIDAD - OBLIGATORIO
-SECRET_KEY=genera_una_clave_segura_con_secrets.token_urlsafe(64)
-
-# BASE DE DATOS
-# Desarrollo: sqlite:///./auditorias.db
-# Producción: postgresql://user:password@host:5432/database
-DATABASE_URL=sqlite:///./auditorias.db
-
-# CONFIGURACIÓN
+# CONFIGURACIÓN DE DESARROLLO
+SECRET_KEY=tu_clave_secreta_aqui
+DATABASE_URL=postgresql://usuario:password@host:5432/database
 DEBUG=True
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# CONFIGURACIÓN DE PRODUCCIÓN (Render)
+# Agregar estas variables en Render Dashboard > Environment
+# PRODUCTION_URL=https://tu-app.onrender.com
+# DEBUG=False
