--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -18,7 +18,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
