--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,2 @@
-alembic==1.13.1
-anyio==4.3.0
-bcrypt==4.1.2
-cffi==1.16.0
-click==8.1.7
-colorama==0.4.6
-cryptography==42.0.5
-dnspython==2.6.1
-ecdsa==0.19.0
-email-validator==2.1.1
-et_xmlfile==2.0.0
-fastapi==0.110.0
-greenlet==3.0.3
-h11==0.14.0
-httptools==0.6.1
-idna==3.6
-Mako==1.3.2
-MarkupSafe==2.1.5
-numpy==1.26.4
-openpyxl==3.1.2
-pandas==2.2.1
-passlib==1.7.4
-psycopg2-binary==2.9.9
-pyasn1==0.6.0
-pycparser==2.21
-pydantic==2.6.4
-pydantic-core==2.16.3
-python-dateutil==2.9.0
-python-dotenv==1.0.1
-python-jose==3.3.0
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
-rsa==4.9
-six==1.16.0
-sniffio==1.3.1
-SQLAlchemy==2.0.29
-starlette==0.36.3
-typing_extensions==4.10.0
-tzdata==2024.1
-uvicorn==0.29.0
-watchfiles==0.21.0
-websockets==12.0
-gunicorn==21.2.0
-pytest==8.1.1
-httpx==0.27.0
+fpdf==1.7.2
+Pillow>=10.0.0
