--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,17 @@
+fastapi==0.110.0
+uvicorn==0.29.0
+sqlalchemy==2.0.29
+psycopg2-binary==2.9.9
+alembic==1.13.1
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.1.2
+python-multipart==0.0.9
+python-dotenv==1.0.1
+pandas==2.2.1
+openpyxl==3.1.2
+email-validator==2.1.1
+gunicorn==21.2.0
 fpdf==1.7.2
 Pillow>=10.0.0
+websockets==12.0
