Actualización: archivos locales y scripts de utilidad

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,39 @@
-# CONFIGURACIÓN DE DESARROLLO
-SECRET_KEY=tu_clave_secreta_aqui
-DATABASE_URL=postgresql://usuario:password@host:5432/database
+# ============================================
+# CONFIGURACIÓN LOCAL (Desarrollo)
+# ============================================
+# Copia este archivo a .env y configura tus valores
+
+# Clave secreta para JWT (genera una nueva con: python -c "import secrets; print(secrets.token_urlsafe(64))")
+SECRET_KEY=tu_clave_secreta_super_larga_y_segura_aqui
+
+# OPCIÓN 1: Base de datos LOCAL (SQLite)
+# DATABASE_URL=sqlite:///./auditorias.db
+
+# OPCIÓN 2: Base de datos RENDER (PostgreSQL) - Conectar local a BD en la nube
+# DATABASE_URL=postgresql://usuario:password@host.oregon-postgres.render.com/database?sslmode=require
+
+# Modo debug (True para desarrollo, False para producción)
 DEBUG=True
+
+# Tiempo de expiración del token JWT (en minutos)
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# CONFIGURACIÓN DE PRODUCCIÓN (Render)
-# Agregar estas variables en Render Dashboard > Environment
+# Límite temporal por defecto para consultas sin fechas (en días)
+# DEFAULT_AUDIT_DAYS=30
+
+# Límite máximo de auditorías por consulta (seguridad)
+# MAX_AUDIT_RESULTS=500
+
+# URL de producción (opcional, solo si necesitas CORS específico)
 # PRODUCTION_URL=https://tu-app.onrender.com
+
+# ============================================
+# CONFIGURACIÓN RENDER (Producción)
+# ============================================
+# Estas variables se configuran en Render Dashboard > Environment:
+# 
+# SECRET_KEY=<generar_nueva_clave_segura>
+# DATABASE_URL=<render_proporciona_esto_automaticamente>
 # DEBUG=False
+# PRODUCTION_URL=https://tu-app.onrender.com
+# ACCESS_TOKEN_EXPIRE_MINUTES=30
